@@ -42,3 +42,5 @@ Now I did a `rm -rf ~wiki/wiki/.ikiwiki/hyperestraier` and re-ran
 `--rebuild`ing once more, I'm back to the previous error message.
 
 --[[tschwinge]]
+
+I guess this is fixed now that it uses xapian. :-) --[[Joey]]
