@@ -1,3 +1,5 @@
+[[done]], using xapian-omega! --[[Joey]]
+
 After using it for a while, my feeling is that [[hyperestraier]], as used in
 the [[plugins/search]] plugin, is not robust enough for ikiwiki. It doesn't
 upgrade well, and it has a habit of sig-11 on certain input from time to
